2013-11-27 Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/setup/setup.php: restored the lost Dario's field, maybe
	it is lost with some or my commits.

2013-11-27 Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/setup/update_manager.php: added new parameters required
	for the update manager server.

2013-11-26 Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css: Added new styles to
	get a cleaner UI on update manager.

2013-11-26 Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/setup/setup.php, integria_dbdata.sql: set the default data
	for the update manager.

2013-11-26  Dario Rodriguez <dario@artica.es>

	* include/config.inc.php,
	include/config_process.php: Moved code from 
	config.inc.php to config_process.php

2013-11-26  Dario Rodriguez <dario@artica.es>

	* include/config.inc.php: Removed comment to keep
	comments up to date.

2013-11-26  Dario Rodriguez <dario@artica.es>

	* include/functions_graph.php,
	include/graphs/fgraph.php,
	include/functions_incidents.php,
	operation/invoices/invoice_stats.php,
	operation/leads/lead_statistics.php: Adapted graphs and report
	to user new base url which support http, https and ports.

2013-11-25  Dario Rodriguez <dario@artica.es>

	* include/config.inc.php,
	install.php,
	godmode/setup/setup.php: Fixed an error generating
	base_url_dir for base_url variable.

2013-11-25  Dario Rodriguez <dario@artica.es>

	* include/config.inc.php,
	install.php: Now we detect automatically the folder of integria
	* operation/projects/project_report.php: Fixed a wrong parameter
	printing project activity graph.
	* godmode/setup/setup.php: Removed some
	depreacted setup options

2013-11-25  Sancho Lerena <slerena@artica.es>

	* operation/newsletter/address_definition.php: Added filter to 
	see disabled addresses on each newsletter.

2013-11-25 Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/setup/update_manager.php: continue with the work in the
	update manager.
